tests/snapshots/test_runner__tests__compiler__typecheck__interface_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
interface Equatable<T> {
}

implements Equatable<String> {
}

// Error: overlapping implementations
implements Equatable<String> {
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/interface_2.kk:8:12
  │
8 │ implements Equatable<String> {
  │            ^^^^^^^^^^^^^^^^^ Overlapping implementation
  │
  = This implementation overlapped with an existing implementation:
      String
